Freestyle Linestyle Alpha not working with EEVEE #64903

Closed
opened 2019-05-20 21:22:39 +02:00 by Enzio Probst · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 411.70

Blender Version
Broken: version: 2.80 (sub 71), branch: master, commit date: 2019-05-20 14:52, hash: 828efef151
Worked: (optional)

Short description of error
Freestyle Linestyle Alpha not working with EEVEE

Exact steps for others to reproduce the error

  • enable freestyle in rendersettings
  • set Alpha Transparency to 0.5 in View Layer Properties -> Freestyle Line Style
  • render
    or
  • Open attached blendfile and render
    freestyle_linestyle_alpha.blend
    the lines should be transparent but aren't.
    Works in Cycles but doesn't work in EEVEE.
    [Based on the default startup or an attached .blend file (as simple as possible)]
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 411.70 **Blender Version** Broken: version: 2.80 (sub 71), branch: master, commit date: 2019-05-20 14:52, hash: `828efef151` Worked: (optional) **Short description of error** Freestyle Linestyle Alpha not working with EEVEE **Exact steps for others to reproduce the error** - enable freestyle in rendersettings - set Alpha Transparency to 0.5 in View Layer Properties -> Freestyle Line Style - render **or** - Open attached blendfile and render [freestyle_linestyle_alpha.blend](https://archive.blender.org/developer/F7053198/freestyle_linestyle_alpha.blend) the lines should be transparent but aren't. Works in Cycles but doesn't work in EEVEE. [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @EnzioProbst

Added subscriber: @EnzioProbst

This issue was referenced by 0977937286

This issue was referenced by 09779372862a1972f8c5831df5408893f0d5c284

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64903
No description provided.