Fix T64903: Freestyle line alpha not working for Eevee